o Site ja esta bom mas ainda da para dar umas melhorias. Agora por mim tiravamos o Suporte e e deixavamos so as contas e por agora faziamos o java que é mais importe

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">Decimal</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Binário</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Octal</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Hexadecimal</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#decimal">Decimal</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#binario">Binário</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#octal">Octal</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#hexa">Hexadecimal</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Suporte</a></li>
                     </ul>
                 </div>
@@ -42,33 +42,80 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Conversão de base numérica é a passagem da representação de um número de uma base numérica para outra, alterando a simbologia para se adequar à nova base. A base que normalmente usamos é a decimal ou base dez, pois contém dez algarismos.</p>
+                        <p class="text-white-75">Conversão de base numérica é a passagem da representação de um número de uma base numérica para outra, alterando a simbologia para se adequar à nova base. A base que normalmente usamos é a decimal ou base dez, pois contém dez algarismos.</p>
                         <a class="btn btn-primary btn-xl" href="#about">Começar a converter</a>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- About-->
-        <section class="page-section bg-primary" id="about">
+        <!-- Decimal-->
+        <section class="page-section bg-primary" id="decimal">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Decimal</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <p class="text-white-75 mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
+                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <br/>
+                        <input type="button" class="bt" value="Calcular!"/>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
+         <!-- Binario-->
+         <section class="page-section" id="binario">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="mt-0">Binário</h2>
+                        <hr class="divider"/>
+                        <p class="text-muted mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
+                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <br/>
+                        <input type="button" class="bto" value="Calcular!"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Octal-->
+        <section class="page-section bg-primary" id="octal">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Octal</h2>
+                        <hr class="divider divider-light" />
+                        <p class="text-white-75 mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
+                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <br/>
+                        <input type="button" class="bt" value="Calcular!"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Binario-->
+        <section class="page-section" id="binario">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="mt-0">Binário</h2>
+                        <hr class="divider"/>
+                        <p class="text-muted mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
+                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <br/>
+                        <input type="button" class="bto" value="Calcular!"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Suport-->
+        <section class="page-section bg-primary" id="contact">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">Alguma duvida?</h2>
-                        <hr class="divider" />
-                        <p class="text-muted mb-5">Se estiver com alguma duvida tirar ao preenxer este formulário.</p>
+                        <h2 class="text-white mt-0">Alguma duvida?</h2>
+                        <hr class="divider divider-light" />
+                        <p class="text-white-75 mb-5">Se estiver com alguma duvida tirar ao preenxer este formulário.</p>
                     </div>
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
@@ -84,27 +131,27 @@
                             <!-- Name input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <label for="name">Full name</label>
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                                <label for="name">Nome completo</label>
+                                <div class="invalid-feedback" data-sb-feedback="name:required">Este campo é obrigatório.</div>
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="email">Email address</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                                <label for="email">Email</label>
+                                <div class="invalid-feedback" data-sb-feedback="email:required">Este campo é obrigatório.</div>
+                                <div class="invalid-feedback" data-sb-feedback="email:email">Este campo é obrigatório.</div>
                             </div>
                             <!-- Phone number input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Phone number</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                                <label for="phone">Numero de telemóvel</label>
+                                <div class="invalid-feedback" data-sb-feedback="phone:required">Este campo é obrigatório.</div>
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Message</label>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                                <label for="message">Menssagem</label>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">Este campo é obrigatório.</div>
                             </div>
                             <!-- Submit success message-->
                             <!---->
@@ -124,7 +171,7 @@
                             <!-- an error submitting the form-->
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
-                            <div class="d-grid"><button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Submit</button></div>
+                            <div class="d-grid"><input type="button" class="bto" value="Submeter!"/></div>
                         </form>
                     </div>
                 </div>
