--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -15,6 +15,8 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!--JS para os calculos-->
+        <script src="js/calculos.js"></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -43,7 +45,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75">Conversão de base numérica é a passagem da representação de um número de uma base numérica para outra, alterando a simbologia para se adequar à nova base. A base que normalmente usamos é a decimal ou base dez, pois contém dez algarismos.</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Começar a converter</a>
+                        <a class="btn btn-primary btn-xl" href="#decimal">Começar a converter</a>
                     </div>
                 </div>
             </div>
@@ -56,9 +58,10 @@
                         <h2 class="text-white mt-0">Decimal</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
-                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <input type="number" id="leitorb" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
-                        <input type="button" class="bt" value="Calcular!"/>
+                        <input type="button" onclick="calcbinario();" class="bt" value="Calcular!"/>
+                        <p id="binario"></p>
                     </div>
                 </div>
             </div>
@@ -94,11 +97,11 @@
             </div>
         </section>
         <!-- Binario-->
-        <section class="page-section" id="binario">
+        <section class="page-section" id="hexa">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Binário</h2>
+                        <h2 class="mt-0">Hexadecimal</h2>
                         <hr class="divider"/>
                         <p class="text-muted mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
                         <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
