enganei-me no ultimo commit meti as função binario no campo decimal mas agr esta certo

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                         <h2 class="text-white mt-0">Decimal</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
-                        <input type="number" id="leitorb" placeholder="Digite o numero" aria-label="default input example"/>
+                        <input type="number" id="leitord" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
-                        <input type="button" onclick="calcbinario();" class="bt" value="Calcular!"/>
+                        <input type="button" onclick="calcdecimal();" class="bt" value="Calcular!"/>
                         <p id="binario"></p>
                     </div>
                 </div>
@@ -74,9 +74,9 @@
                         <h2 class="mt-0">Binário</h2>
                         <hr class="divider"/>
                         <p class="text-muted mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
-                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <input type="number" id="leitorb" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
-                        <input type="button" class="bto" value="Calcular!"/>
+                        <input type="button" onclick="calcbinario();" class="bto" value="Calcular!"/>
                     </div>
                 </div>
             </div>
