--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <input type="number" id="leitorb" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
                         <input type="button" onclick="calcbinario();" class="bto" value="Calcular!"/>
+                        <p id="binario"></p>
                     </div>
                 </div>
             </div>
