--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <input type="number" id="leitord" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
                         <input type="button" onclick="calcdecimal();" class="bt" value="Calcular!"/>
-                        <p id="binario"></p>
+                        <p id="decimal"></p>
                     </div>
                 </div>
             </div>
