--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -15,6 +15,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -43,7 +44,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75">Conversão de base numérica é a passagem da representação de um número de uma base numérica para outra, alterando a simbologia para se adequar à nova base. A base que normalmente usamos é a decimal ou base dez, pois contém dez algarismos.</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Começar a converter</a>
+                        <a class="btn btn-primary btn-xl" href="#decimal">Começar a converter</a>
                     </div>
                 </div>
             </div>
@@ -56,9 +57,10 @@
                         <h2 class="text-white mt-0">Decimal</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
-                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <input type="number" id="leitord" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
-                        <input type="button" class="bt" value="Calcular!"/>
+                        <input type="button" onclick="calcdecimal();" class="bt" value="Calcular!"/>
+                        <p class="text-white-75 mb-5" id="decimalR"></p>
                     </div>
                 </div>
             </div>
@@ -71,9 +73,10 @@
                         <h2 class="mt-0">Binário</h2>
                         <hr class="divider"/>
                         <p class="text-muted mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
-                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <input type="number" id="leitorb" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
-                        <input type="button" class="bto" value="Calcular!"/>
+                        <input type="button" onclick="calcbinario();" class="bto" value="Calcular!"/>
+                        <p id="binarioR" class="text-muted mb-5"></p>
                     </div>
                 </div>
             </div>
@@ -86,24 +89,26 @@
                         <h2 class="text-white mt-0">Octal</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
-                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <input type="number" id="leitoro" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
-                        <input type="button" class="bt" value="Calcular!"/>
+                        <input type="button" onclick="calcoctal();" class="bt" value="Calcular!"/>
+                        <p id="octalR" class="text-white-75 mb-5"></p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Binario-->
-        <section class="page-section" id="binario">
+        <section class="page-section" id="hexa">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Binário</h2>
+                        <h2 class="mt-0">Hexadecimal</h2>
                         <hr class="divider"/>
                         <p class="text-muted mb-5">Digite o número que pertente converter para decimal no retangulo abaixo e de seguida clique em "Calcular!".</p>
-                        <input type="number" placeholder="Digite o numero" aria-label="default input example"/>
+                        <input type="number" id="leitorh" placeholder="Digite o numero" aria-label="default input example"/>
                         <br/>
-                        <input type="button" class="bto" value="Calcular!"/>
+                        <input type="button" onclick="calchexa();" class="bto" value="Calcular!"/>
+                        <p id="hexaR" class="text-muted mb-5"></p>
                     </div>
                 </div>
             </div>
@@ -179,5 +184,18 @@
                 </div>
             </div>
         </section>
+        <!-- Footer-->
+        <footer class="bg-light py-5">
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Company Name</div></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- SimpleLightbox plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <!--JS para os calculos-->
+        <script src="js/calculos.js"></script>
     </body>
 </html>
